@@ -197,6 +197,8 @@ Date: 2024-12-08
     - Changed crafting times of flux containers from 2 to 1.5, and flux from 4 to 3.
     - Finally changed A-ATM packs to use titanium/tungsten plates.
     - Lowered amount of red circuits needed for washing plant 2's from 6 to 4.
+    - Lowered the energy usage of molten-inator 1's from 672kW to 330kW.
+    - Lowered the energy usage of molten-inator 2's from 750kW to 650kW.
 
   Fixes:
     - Fixed the science pack item names captilisation.
